k8s/apps/code-server/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: codercom/code-server:4.19.1-bullseye@sha256:993c381c28a3738b903ac21180f5f9dab8f2aa547bbb0b9d69bea558691e10d3
          workingDir: /mnt
          args:
            - --auth=none
            - --disable-telemetry
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: pool
              mountPath: /mnt/pool
            - name: juicefs
              mountPath: /mnt/juicefs
            - name: k8s-volumes
              mountPath: /mnt/k8s-volumes
            - name: data
              mountPath: /home/coder/.local/share/code-server
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
      volumes:
        - name: pool
          hostPath:
            path: /mnt/pool
            type: Directory
        - name: juicefs
          hostPath:
            path: /var/lib/juicefs/volume
            type: Directory
        - name: k8s-volumes
          hostPath:
            path: /mnt/local
            type: Directory
        - name: data
          hostPath:
            path: /mnt/local/code-server/data
            type: DirectoryOrCreate
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
